# workspace-sysmonitor

./: CMakeLists.txt  README.md
include/: linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
